<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <!-- INFO BUTTONS  -->
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dip"
            android:orientation="horizontal"
            android:layout_weight="1"
            >

        <Button
                android:layout_width="0dip"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/learn_info_wdb"
                android:id="@+id/btnTestWordsInfoWC"
                android:enabled="true"
                android:background="@drawable/flat_selector"
                android:textColor="@android:color/white"
                android:textSize="@dimen/button_text_size"

                />
        <Button
                android:layout_width="0dip"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/learn_info_wil"
                android:id="@+id/btnTestWordsInfoWITC"
                android:enabled="true"
                android:background="@drawable/flat_selector"
                android:textColor="@android:color/white"
                android:textSize="@dimen/button_text_size"
                />

        <Button
                android:layout_width="0dip"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/learn_info_cl"
                android:id="@+id/btnLearnInfoCL"
                android:enabled="true"
                android:background="@drawable/flat_selector"
                android:textColor="@android:color/white"
                android:textSize="@dimen/button_text_size"
                />
        <Button
                android:layout_width="0dip"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/learn_info_cp"
                android:id="@+id/btnLearnInfoCP"
                android:enabled="true"
                android:background="@drawable/flat_selector"
                android:textColor="@android:color/white"
                android:textSize="@dimen/button_text_size"
                />
    </LinearLayout>


</LinearLayout>